# legacy-sipXlang-es_MX

./: Makefile.am  configure.ac  sipxecs-lang-es_MX.spec.in  sipxlang-es_MX.spec.in
sipxpbx/: sipxplugin.beans.xml
sipxpbx/WEB-INF/: LoginPage_es_MX.properties  sipXconfig-web_es_MX.properties
sipxpbx/WEB-INF/acd/: AcdAgentsPanel_es_MX.properties  AcdHistoryPage_es_MX.properties  AcdQueuesStatsPanel_es_MX.properties  AcdServerPage_es_MX.properties  AcdSupervisorConsole_es_MX.properties  EditAcdAgent_es_MX.properties  EditAcdQueue_es_MX.properties
sipxpbx/WEB-INF/admin/: EditPagingGroupPage_es_MX.properties  Intercom_es_MX.properties  LocalizationPage_es_MX.properties  ManageDomain_es_MX.properties  PagingGroupsPage_es_MX.properties  SnapshotPage_es_MX.properties
sipxpbx/WEB-INF/common/: AdminNavigation_es_MX.properties
sipxpbx/WEB-INF/conference/: EditBridge_es_MX.properties
sipxpbx/WEB-INF/line/: AddExternalLine_es_MX.properties
sipxpbx/acd/: sipxacd-agent_es_MX.properties  sipxacd-line_es_MX.properties  sipxacd-queue_es_MX.properties  sipxacd-server_es_MX.properties
sipxpbx/commserver/: server_es_MX.properties  siptrunk_es_MX.properties  user-settings_es_MX.properties
sipxpbx/lg-nortel/: line_es_MX.properties  phone_es_MX.properties
sipxpbx/linksysPhone/: line_es_MX.properties  phone_es_MX.properties
sipxpbx/polycom/: line_es_MX.properties  phone_es_MX.properties
sipxpbx/sipxpark/: park-orbit_es_MX.properties
sipxpbx/sipxvxml/: autoattendant_es_MX.properties
sipxpbx/snom/: line_es_MX.properties  phone_es_MX.properties
(+14 files in other folders)
